--- a/_config.yml
+++ b/_config.yml
@@ -11,11 +11,12 @@ kind: "lesson"
 # Overall title for pages.
 title: "Lesson Title"
 
-# Account (without slashes).
-account: "swcarpentry"
+# Repository URL (without trailing slash).
+repo: https://github.com/swcarpentry/lesson-example
 
-# Root URL below account (without slashes).
-project: "lesson-example"
+# Root URL below username.github.io domain, with leading slash but no trailing slash.
+# For example, for 'https://swcarpentry.github.io/lesson-example', use '/lesson-example'.
+root: "/lesson-example"
 
 # Contact email address.
 email: lessons@software-carpentry.org
@@ -23,9 +24,6 @@ email: lessons@software-carpentry.org
 #------------------------------------------------------------
 # Generic settings (should not need to change).
 #------------------------------------------------------------
-
-# Is this production or development? (Overridden in _config_dev.yml.)
-is_production: true
 
 # Sites.
 amy_site: "https://amy.software-carpentry.org/workshops"
