--- a/_config.yml
+++ b/_config.yml
@@ -11,19 +11,16 @@ kind: "lesson"
 # Overall title for pages.
 title: "Lesson Title"
 
-# Repository URL (without trailing slash).
-repo: https://github.com/swcarpentry/lesson-example
-
-# Root URL below username.github.io domain, with leading slash but no trailing slash.
-# For example, for 'https://swcarpentry.github.io/lesson-example', use '/lesson-example'.
-root: "/lesson-example"
-
 # Contact email address.
 email: lessons@software-carpentry.org
 
 #------------------------------------------------------------
 # Generic settings (should not need to change).
 #------------------------------------------------------------
+
+# Magic to make URLs resolve both locally and on GitHub.
+# See https://help.github.com/articles/repository-metadata-on-github-pages/.
+repository: <USERNAME>/<PROJECT>
 
 # Sites.
 amy_site: "https://amy.software-carpentry.org/workshops"
