Some reorganization and updates

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 carpentry: "swc"
 
 # Overall title for pages.
-title: "Lesson Title"
+title: "Genomics Workshop"
 
 # Contact email address.
 contact: "mailto:lessons@software-carpentry.org"
