Fix link to contact in footer

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ carpentry: "swc"
 title: "Genomics Workshop"
 
 # Contact email address.
-contact: "mailto:lessons@software-carpentry.org"
+contact: "atrikut@clemson.edu"
 
 #------------------------------------------------------------
 # Generic settings (should not need to change).
